fix(MainView.jsx) fix clipping on size change (header is position: absolute = affects sizing

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -3,7 +3,9 @@
 	display: flex; 
  	width: 100%;
   height: 80px; 
-	min-width: 1265px;    
+	min-width: 1280px;
+	position: absolute;
+  z-index: 2;
 }
  
 /* =============================== Nav links ============================== */
@@ -26,8 +28,8 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: flex-end;  
-	min-width: 484px;
-	width: 39%;
+	min-width: 500px;
+	width: 30%;
 	padding-left: 6%;
 	padding-right: 3%;
 	height: 100%;  
@@ -53,8 +55,8 @@
 	flex-grow: 1;
 	display: flex;
 	flex-direction: column;
-	justify-content: flex-end;  
-	background: firebrick;
+	justify-content: flex-end;    
+	min-width: 780px;
 }  
 
 .header-right-content-container {
