--- a/src/styles/mainView.css
+++ b/src/styles/mainView.css
@@ -3,8 +3,9 @@
 	height: 100vh;
 	width: 100%; 
 	display: flex;
-	min-width: 1265px;
+	min-width: 1280px;
 	min-height: 540px;
+	background: yellow; 
 } 
 
 /* ======= Main View Left */ 
@@ -18,7 +19,7 @@
 	padding-top: 220px;
   padding-left: 6%;
   padding-right: 3%;
-  min-width: 484px;
+  min-width: 500px;
   width: 39%;
   height: 100%; 
 }
@@ -26,9 +27,10 @@
 /* ======= Main View Right */
 .main-view-right { 
 	z-index: 0;
-	padding-top: 100px;
-	flex-grow: 1;
+	padding-top: 100px; 
+	width: 100%;
 	height: 100%;
+	min-width: 780px;
 } 
 
 /* Buttons */
